# teampixel-main

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
core/: cmds.py  custom_routers.py  database.py  exceptions.py  models.py  repository.py  schemas.py  service.py
core/commands/: __init__.py  load_fixtures.py  super_user.py  wrapper.py
core/config/: db.py  jwt.py  redis.py  settings.py  templates.py
html/: admin_login.html  analytics.html  auth.html  company.html  index.html  possibilities.html  register_admin.html  test.html
html/errors/: 401.html  403.html  404.html  500.html
html/profile/: course.html  create_test.html  education.html  hr.html  profile.html  results.html  tests.html  tests_base.html  vr.html
html/widgets/: gallery.html  stats-widget.html
migrations/: base.py  env.py
migrations/versions/: 005c0e95d23f_reviews.py  8a0b3695b986_test.py  b3335b72303a_avatar.py  b44d4f071d44_user.py  ce5eb75dd667_portals.py
notes/: админ панель.md  кэширование.md
src/: main.py  routers.py
src/admin_dashboard/: admin.py  admin_models_views.py  auth_backend.py  hr_model_views.py  models_views.py
src/auth/: routes.py  schemas.py  service.py
src/courses/: models.py  repositories.py  schemas.py  services.py
src/portals/: models.py  repository.py  routes.py  schemas.py  service.py
src/templates/: routes.py
src/users/: __init__.py  consts.py  models.py  repository.py  routes.py  schemas.py  service.py
src/vr_api/: auth.py  (+3 more)
tests/: config.py  conftest.py  test_auth.py
(+27 files in other folders)
