[tool.poetry]
name = "teampixel"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "3.1.2"
fastapi = "0.104.0"
pydantic = "2.4.2"
pydantic-settings = "2.0.3"
aiohttp = "3.8.6"
aioredis = "1.3.1"
aiosignal = "1.3.1"
alembic = "1.12.0"
annotated-types = "0.6.0"
anyio = "3.7.1"
async-timeout = "4.0.3"
asyncpg = "0.28.0"
attrs = "23.1.0"
certifi = "2023.7.22"
cfgv = "3.4.0"
charset-normalizer = "3.3.0"
click = "8.1.7"
colorama = "0.4.6"
distlib = "0.3.7"
fastapi-cache = "0.1.0"
fastapi-cache2 = "0.2.1"
filelock = "3.12.4"
frozenlist = "1.4.0"
greenlet = "3.0.0"
h11 = "0.14.0"
hiredis = "2.2.3"
identify = "2.5.30"
idna = "3.4"
mako = "1.2.4"
markupsafe = "2.1.3"
multidict = "6.0.4"
nodeenv = "1.8.0"
pendulum = "2.1.2"
platformdirs = "3.11.0"
pre-commit = "3.5.0"
pydantic-core = "2.10.1"
pyjwt = "2.8.0"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
pytzdata = "2020.1"
pyyaml = "6.0.1"
redis = "4.6.0"
requests = "2.31.0"
six = "1.16.0"
sniffio = "1.3.0"
sqlalchemy = "2.0.22"
starlette = "0.27.0"
typing-extensions = "4.8.0"
urllib3 = "2.0.7"
uvicorn = "0.23.2"
virtualenv = "20.24.5"
yarl = "1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
pythonpath = [
  "."
]
asyncio_mode="auto"
